<resources>
    <string name="app_name">MobileReportApp</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- Активити добавления Жалобы-->
    <string name="textViewBuilding"> Выбранное здание </string>
    <string name="titleAddComplaint"> Добавить заявку </string>
    <string name="hintEnterText"> Введите текст заявки </string>
    <string name="headerDialogSelectFloorsTrue"> Выберете этаж </string>
    <string name="headerDialogSelectFloorsFalse"> Здание не выбрано </string>
    <string name="titleComplaint"> Все заявки </string>
    <string name="titleUserComplaint"> Мои заявки </string>
    <string name="titleDetailComplaint"> Детали заявки </string>
    <string name="addComment">Добавить комментарий</string>
    <string name="emptyTextCommentMessage">Введите текст комментария</string>


    <!-- Активити жалоб -->
    <string name="textViewTextComplaint">Дефолтный текст жалобы</string>
    <string name="textViewStatus">дефолтный статус</string>
    <string name="textViewCountComments">дефолтное кол-во комментариев</string>
    <string name="textViewRating">дефолтный рейтинг</string>
    <string name="textViewOwner">дефолтный автор</string>
    <string name="textViewTitle">дефолтный заголовок</string>
    <string name="textViewDate">дефолтная дата</string>

    <string name="textViewNameUser">Дефолтный user</string>
    <string name="buttonMyComplaint">Мои жалобы</string>

    <string name="drawer_item_user">Дефолтный Юзер</string>
    <string name="drawer_item_home">группа 11-104</string>
    <string name="drawer_item_custom">Мои жалобы</string>
    <string name="drawer_item_all">Все жалобы</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Помощь</string>
    <string name="drawer_item_out">Выход</string>

    <color name="white">#FFFFFF</color>
    <string name="title_activity_add_complasint">AddComplaintActivity</string>
    <string name="buttonAddPhoto">Добавить фотографию</string>
    <string name="buttonSend">Отправить</string>

    <string name="album_name">CameraSample</string>
    <string name="cannot">Cannot</string>
    <string name="title_activity_auto">AutoActivity</string>

    <string name="title_activity_log_in">LogInActivity</string>

    <string name="buttonLogIn"> Войти </string>
    <string name="textEditName"> Логин </string>
    <string name="title_activity_detail_complaint">DetailsComplaintActivity</string>

    <string name="number_list">Список чисел</string>
    <string name="empty">Нет данных</string>
    <string name="title_activity_user_complaint">UserComplaintActivity</string>

    <!-- Диалог выбора варианта загрузки изображения -->
    <string name="exit">Способ загрузки</string>
    <string name="save_data">Выберете способ загрузки изображения</string>
    <string name="yes">Камера</string>
    <string name="no">Галерея</string>
    <string name="cancel">Отмена</string>
    <string name="saved">Сохранено</string>
    <string name="title_activity_geo_maps">GeoMapsActivity</string>

    <!-- Диалог выбора варианта сортировки -->
    <string name="sortTitle">Сортировать</string>
    <string name="sortBuilding">Здание</string>
    <string name="sortData">Дата</string>
    <string name="sortCount">Количество</string>
    <string name="sortStatus">Статус</string>
    <string name="sortStatusAgreed">Решено</string>
    <string name="sortStatusDuring">В процессе</string>
    <string name="sortStatusDenied">Отказано</string>
    <string name="sortFloor">Этаж</string>
    <string name="sortButton">Ok</string>

    <!-- Активити с картой -->
    <string name="buttonSelectBuilding">"Выбрать здание"</string>

    <!-- Настройки -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="preferencesUserHeader">"Настройки"</string>
    <string name="preferencesUserSubTitle">"Пользовательские настройки"</string>
    <string name="textPreferencesUserPhoto">"Фото пользователя"</string>
    <string name="buttonPreferencesUserPhoto">"Загрузить фото  "</string>

    <!-- LogIn Activity -->
    <string name="LogInHeader">"Мобильный репортер"</string>
    <string name="hintLogin">Логин</string>
    <string name="hintPassword">Пароль</string>
    <string name="buttonReg"> Регистрация </string>

    <!-- RegistrationActivity -->
    <string name="hintEditTextFacultyId">ID факультета </string>
    <string name="hintEditTextConfirmPassword">Подтверждение</string>
    <string name="successMessage">Вы успешно зарегестрированы</string>
    <string name="emptyFieldsMessage">Заполните все поля</string>
    <string name="titleRegActivity">Регистрация</string>

    <!-- Сервер -->
    <string name="messageServerUnknown"> Сервер не найден </string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
