<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextLoginReg"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:hint="@string/hintLogin"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextFacultyId"
            android:hint="@string/hintEditTextFacultyId"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPasswordReg"
            android:layout_gravity="center"
            android:hint="@string/hintPassword"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextConfirmPassword"
            android:hint="@string/hintEditTextConfirmPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/buttonReg"
            android:id="@+id/buttonRegistrationReg"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="left|center_vertical"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:drawableRight="@drawable/selector_button_reg_icon"
            android:background="@drawable/selector_button"/>
    </LinearLayout>

</FrameLayout>

