<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="end"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSelectBuilding"
            android:id="@+id/buttonSelectBuilding" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/spinnerFloor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextComplaint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddPhoto"
            android:id="@+id/buttonAddPhoto" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageViewComplaint"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:minHeight="200dp"
            android:src="@drawable/answer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSend"
            android:id="@+id/buttonSend" />

    </LinearLayout>
</ScrollView>