<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/ic_launcher">
        </ImageView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textViewTextComplaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/textViewTextComplaint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/textViewStatus"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:id="@+id/textViewCountComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewCountComments"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <ImageButton
                android:id="@+id/imageButtonComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewRating"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <ImageButton
                android:id="@+id/imageButtonRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </TableRow>
    </TableLayout>

</LinearLayout>