<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_gravity="start"
                android:layout_marginLeft="2dp"
                android:src="@drawable/header_logo">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.86">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/textViewOwner"
                        android:id="@+id/textViewOwner"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/textViewDate"
                        android:id="@+id/textViewDate"
                        android:layout_weight="1"
                        android:layout_gravity="right" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:background="#064076"
                android:layout_width = "match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.08">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/textViewTitle"
                    android:id="@+id/textViewTitle"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="left" />

                <TextView
                    android:id="@+id/textViewTextComplaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/textViewTextComplaint"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

            <View
                android:background="#064076"
                android:layout_width = "match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.41"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textViewStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewStatus"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:layout_gravity="left" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.92">

                        <TextView
                            android:id="@+id/textViewCountComments"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="2"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:layout_gravity="right"
                            android:layout_marginRight="5dp"
                            android:gravity="center_vertical" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.22">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageViewCountComments"
                            android:layout_weight="2"
                            android:layout_gravity="center|right"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/ic_comment_black_24dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textViewRating"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/textViewRating"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:layout_weight="1"
                            android:layout_gravity="center|right"
                            android:layout_marginRight="5dp"
                            android:gravity="center_vertical" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageViewRating"
                            android:layout_weight="2"
                            android:layout_marginRight="5dp"
                            android:layout_gravity="center|right"
                            android:src="@drawable/ic_star_border_black_48dp"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>